new ConditionsMap